<resources>
    <string name="ad_mob_app_id" translatable="false">ca-app-pub-5126697230667487~5993695533</string>
    <string name="app_name">Accountant assistant</string>
    <string name="app_version">Version: 1.0</string>
    <string name="open_action">Open</string>
    <string name="logout_action">Logout</string>
    <string name="logout_confirmation_title">@string/logout_action</string>
    <string name="logout_confirmation_message">Are you sure you want to logout and exit?</string>
    <string name="nav_header_title">accountant.assistant@gmail.com</string>
    <string name="nav_header_subtitle">v1.0.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="import_all">Import</string>
    <string name="export_all">Export</string>
    <string name="import_export">Import/Export</string>
    <string name="delete_all">Delete all</string>
    <string name="money_format">###.###.###,##</string>

    <string name="menu_home">Home</string>
    <string name="money_to_expense">Money to expense</string>
    <string name="period_to_expense">Period to expense</string>

    <string name="available">Available</string>
    <string name="available_value">Available : %1$s</string>
    <string name="expenses">Expenses</string>
    <string name="total">Total</string>
    <string name="gain">Gain</string>
    <string name="missing">Missing</string>
    <string name="daily">Daily</string>

    <string name="card_company">Company</string>
    <string name="card_password">Password</string>

    <string name="menu_summary">Summary</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_buys">Buys</string>
    <string name="menu_bills">Bills</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_remittances">Remittances</string>

    <!--Bills-->
    <string name="bill">Bill</string>
    <string name="bills_due_title">Bills due</string>
    <string name="bills_due_soon_text">You have bills due soon!</string>
    <string name="bills_due_today_text">You have bills due today!</string>

    <string name="calculate">Calculate</string>
    <string name="add_action">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="food_product">Food Product</string>
    <string name="one_unity">1u</string>
    <string name="price_default_value">00.00</string>
    <string name="total_to_pay">Total to pay</string>
    <string name="default_total_value">00.00</string>

    <string name="one_time">1x</string>
    <string name="separator">-</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="active">Active</string>
    <string name="date">Date</string>
    <string name="payment_date">Payment date</string>
    <string name="value">Value</string>
    <string name="available_card_value">Available value</string>
    <string name="limit_card_value">Limit value</string>
    <string name="error_saving_your_data">Error trying to save your data</string>
    <string name="error_deleting_records">Error trying to delete record(s).</string>
    <string name="successfully_deleted_record">Record successfully deleted</string>
    <string name="record_successfully_save">Record successfully save</string>
    <string name="ok">OK</string>
    <string name="select_quantity">Select a quantity</string>
    <string name="excel_data_imported">Data Imported in a Excel Sheet</string>
    <string name="excel_data_exported">Data Exported in a Excel Sheet</string>
    <string name="db_successfully_imported">DB successfully imported!</string>
    <string name="db_successfully_exported">DB successfully exported!</string>
    <string name="db_importing_failure">DB importing failure</string>
    <string name="db_exporting_failure">DB exporting failure</string>
    <string name="wallet_details">Wallet details</string>
    <string name="bills_details">Bills details</string>
    <string name="buys_details">Buys details</string>
    <string name="delete_record_title">Delete record</string>
    <string name="delete_record_message">Are you sure you want to delete current record?\n\nYou\'ll will lose current record!</string>
    <string name="delete_all_records_title">Delete all records</string>
    <string name="delete_all_records_message">Are you sure you want to delete all records?\n\nYou\'ll will lose all current records!</string>
    <string name="import_export_title">Import/Export</string>
    <string name="import_export_message">Choose an option to proceed:</string>
    <string name="barcode_scan_action">Barcode scan</string>
    <string name="fail_bar_code_detector">Could not set up the detector!</string>
    <string name="none_barcode_found">None barcode found</string>
    <string name="bar_code_number">Bar code number</string>
    <string name="barcode_scanner">Barcode scanner</string>
    <string name="exit">Exit</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="payment_complete_message">Payment completed</string>
    <string name="payment_failed_message">Payment failed</string>

    <string name="search_view_hint_message">Type an item to search</string>
    <string name="sign_in_action_text">Sign In</string>
    <string name="sign_in_canceled">Sign In canceled</string>
    <string name="sign_in_failed">Sign In failed</string>
    <string name="select_period">Select period</string>

    <string name="ad_attribution_text">Ad</string>

</resources>
