<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_buys"
            android:icon="@drawable/ic_menu_buys"
            android:title="@string/menu_buys" />
        <item
            android:id="@+id/nav_bills"
            android:icon="@drawable/ic_menu_bills"
            android:title="@string/menu_bills" />
        <!--<item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/tickets_black"
            android:title="@string/menu_tickets" />
        <item
            android:id="@+id/nav_remittances"
            android:icon="@drawable/tickets_black"
            android:title="@string/menu_remittances" />-->
    </group>

    <!-- <item android:title="Communicate">
         <menu></menu>
     </item>-->

</menu>
