<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.personal.accountantAssistant.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_buys"
        android:name="com.personal.accountantAssistant.ui.buys.BuysFragment"
        android:label="@string/menu_buys"
        tools:layout="@layout/fragment_buys" />

    <fragment
        android:id="@+id/nav_bills"
        android:name="com.personal.accountantAssistant.ui.bills.BillsFragment"
        android:label="@string/menu_bills"
        tools:layout="@layout/fragment_bills" />

    <!--<fragment
        android:id="@+id/nav_tickets"
        android:name="com.personal.accountantAssistant.ui.tickets.TicketsFragment"
        android:label="@string/menu_tickets"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/nav_remittances"
        android:name="com.personal.accountantAssistant.ui.payments.RemittancesFragment"
        android:label="@string/menu_remittances"
        tools:layout="@layout/fragment_remittances" />-->

</navigation>