<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/whiteColor"
    app:cardElevation="@dimen/card_view_elevation"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/card_view_content_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half_material_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/text_field_height"
            android:gravity="center_vertical"
            android:text="@string/bill"
            android:textAlignment="gravity"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/glDivisor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/text_field_height"
            android:gravity="center_vertical"
            android:text="@string/separator"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/glDivisor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/value"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/text_field_height"
            android:gravity="center_vertical"
            android:text="@string/price_default_value"
            android:textAlignment="gravity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glDivisor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glDivisor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <include
            android:id="@+id/lytActions"
            layout="@layout/list_item_actions"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/glDivisor"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>