<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_material_margin"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context=".ui.wallet.WalletDetailsFragment"
    tools:ignore="PrivateResource">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/TitleTopRoundedTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytCompany"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_material_margin"
        android:hint="@string/card_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCompany"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:ems="10"
            android:inputType="textCapSentences"
            android:minHeight="@dimen/title_height"
            android:textAlignment="center"
            android:textSize="@dimen/card_subTitle_text_size"
            android:theme="@style/FocusEditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytName"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_material_margin"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytCompany">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:ems="10"
            android:inputType="textCapSentences"
            android:minHeight="@dimen/title_height"
            android:textAlignment="center"
            android:textSize="@dimen/card_subTitle_text_size"
            android:theme="@style/FocusEditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytAvailableValue"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_material_margin"
        android:hint="@string/available_card_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytName">

        <com.personal.accountantAssistant.bases.currency.CurrencyEditText
            android:id="@+id/etAvailableValue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:ems="10"
            android:inputType="number"
            android:minHeight="@dimen/title_height"
            android:textAlignment="center"
            android:textSize="@dimen/card_subTitle_text_size"
            android:theme="@style/FocusEditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytLimitValue"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_material_margin"
        android:hint="@string/limit_card_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytAvailableValue">

        <com.personal.accountantAssistant.bases.currency.CurrencyEditText
            android:id="@+id/etLimitValue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:ems="10"
            android:inputType="number"
            android:minHeight="@dimen/title_height"
            android:textAlignment="center"
            android:textSize="@dimen/card_subTitle_text_size"
            android:theme="@style/FocusEditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytPassword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_material_margin"
        android:hint="@string/card_password"
        app:layout_constraintEnd_toStartOf="@id/tvActive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytLimitValue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4"
            android:minHeight="@dimen/title_height"
            android:textAlignment="center"
            android:textSize="@dimen/card_subTitle_text_size"
            android:theme="@style/FocusEditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytPaymentDate"
        style="@style/TextInputLayoutStyle"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_material_margin"
        android:hint="@string/payment_date"
        app:layout_constraintEnd_toStartOf="@id/tvActive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPaymentDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:ems="10"
            android:inputType="date"
            android:minHeight="@dimen/title_height"
            android:textAlignment="center"
            android:textSize="@dimen/card_subTitle_text_size"
            android:theme="@style/FocusEditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/active"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/lytPaymentDate"
        app:layout_constraintEnd_toStartOf="@id/scActive"
        app:layout_constraintTop_toTopOf="@id/lytPassword" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/scActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="@dimen/image_button_size"
        android:minHeight="@dimen/image_button_size"
        app:layout_constraintBottom_toBottomOf="@id/lytPaymentDate"
        app:layout_constraintEnd_toEndOf="@id/lytLimitValue"
        app:layout_constraintTop_toTopOf="@id/lytPassword"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <include
        android:id="@+id/lytFooter"
        layout="@layout/options_footer_bar"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_material_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
