<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardElevation="@dimen/card_view_elevation"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/card_view_content_padding">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="@dimen/full_layout_weight"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/item_detail_col"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/half_material_margin"
                android:layout_weight="@dimen/start_layout_weight"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_field_height"
                    android:gravity="center_vertical"
                    android:text="@string/food_product"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/small_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/value"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_field_height"
                    android:gravity="center_vertical"
                    android:text="@string/price_default_value"
                    android:textAlignment="gravity" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_action_col"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/end_layout_weight"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/active_action"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/small_material_margin"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <ImageButton
                    android:id="@+id/delete_action"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/small_material_margin"
                    android:background="@null"
                    android:contentDescription="@string/delete"
                    android:minWidth="@dimen/image_button_width"
                    android:src="@drawable/delete_red" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

</androidx.cardview.widget.CardView>