<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_material_margin"
    android:background="@drawable/layout_rounded_shape"
    android:orientation="vertical"
    tools:context=".ui.payments.PaymentsDetailsFragment"
    tools:ignore="PrivateResource">

    <TextView
        android:id="@+id/tvPaymentDetailsTitle"
        style="@style/TitleDetailsTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_material_margin"
        android:hint="@string/name"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPaymentDetailsTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPaymentName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textCapSentences"
            android:minHeight="@dimen/title_height"
            android:textAlignment="center"
            android:textSize="@dimen/card_subTitle_text_size"
            android:theme="@style/FocusEditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytQuantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_material_margin"
        android:hint="@string/quantity"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPaymentQuantity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            android:minHeight="@dimen/title_height"
            android:textAlignment="center"
            android:textSize="@dimen/card_subTitle_text_size"
            android:theme="@style/FocusEditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytValue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_material_margin"
        android:hint="@string/value"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytQuantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPaymentValue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/title_height"
            android:textAlignment="center"
            android:textSize="@dimen/card_subTitle_text_size"
            android:theme="@style/FocusEditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lytDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_material_margin"
        android:hint="@string/date"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:layout_constraintEnd_toStartOf="@id/lytActive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytValue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPaymentDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:minHeight="@dimen/title_height"
            android:textAlignment="center"
            android:textSize="@dimen/card_subTitle_text_size"
            android:theme="@style/FocusEditTextTheme" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/lytActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_material_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lytDate"
        app:layout_constraintTop_toBottomOf="@id/lytValue">

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/active"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/payment_active"
            android:layout_width="@dimen/switch_size"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <include
        android:id="@+id/lytFooter"
        layout="@layout/options_footer_bar"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/half_material_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
